# field-kinds

./: .editorconfig  CHANGELOG.md  Cargo.toml  LICENSE  README.md  mutants.toml  rustfmt.toml
.cargo/: mutants.toml
.github/workflows/: mutants.yml  rust.yml
examples/: basic.rs  custom_types.rs  custom_visitor.rs
field-kinds-derive/: Cargo.toml
field-kinds-derive/src/: field.rs  generate.rs  lib.rs  parse.rs
src/: field_meta.rs  lib.rs
src/field_meta/: categories.rs  field_info.rs  hlist_ops.rs  mod.rs  visitor.rs  visitors.rs
tests/: categories_test.rs  derive_basic_test.rs  derive_generics_test.rs  derive_serde_test.rs  derive_tags_test.rs  hlist_test.rs  proptest_invariants.rs  visitors_test.rs
