[package]
name = "field-kinds"
version = "0.3.0"
edition = "2024"
rust-version = "1.90.0"
license = "MIT"
description = "Derive macro for compile-time struct field type introspection"
authors = ["Nikita Timofeenko"]
repository = "https://github.com/niktimf/field-kinds"
readme = "README.md"
keywords = ["derive", "macro", "reflection", "introspection", "struct"]
categories = ["development-tools::procedural-macro-helpers", "rust-patterns"]

[dependencies]
field-kinds-derive = { path = "field-kinds-derive", version = "0.3.0" }
frunk = "0.4"

[dev-dependencies]
rstest = "0.26"
proptest = "1.9"

[workspace]
members = ["field-kinds-derive"]

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cognitive_complexity = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
module_inception = "allow"