[package]
name = "field-kinds-derive"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
description = "Proc-macro implementation for field-kinds"
repository = "https://github.com/niktimf/field-kinds"
readme = "../README.md"
keywords = ["derive", "macro", "reflection", "introspection", "struct"]
categories = ["development-tools::procedural-macro-helpers", "rust-patterns"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1"
convert_case = "0.10"
proc-macro-crate = "3.4"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cognitive_complexity = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
module_inception = "allow"
